; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264qpel_msa.c_ff_avg_h264_qpel4_mc02_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264qpel_msa.c_ff_avg_h264_qpel4_mc02_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_avg_h264_qpel4_mc02_msa(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_8__, align 4
  %15 = alloca %struct.TYPE_8__, align 4
  %16 = alloca i64, align 8
  %17 = alloca i64, align 8
  %18 = alloca i64, align 8
  %19 = alloca i64, align 8
  %20 = alloca i64, align 8
  %21 = alloca i64, align 8
  %22 = alloca i64, align 8
  %23 = alloca i64, align 8
  %24 = alloca i64, align 8
  %25 = alloca i64, align 8
  %26 = alloca i64, align 8
  %27 = alloca i64, align 8
  %28 = alloca i64, align 8
  %29 = alloca i64, align 8
  %30 = alloca i64, align 8
  %31 = alloca i64, align 8
  %32 = alloca i64, align 8
  %33 = alloca i64, align 8
  %34 = alloca i64, align 8
  %35 = alloca i64, align 8
  %36 = alloca i64, align 8
  %37 = alloca i64, align 8
  %38 = alloca i64, align 8
  %39 = alloca i64, align 8
  %40 = alloca i32, align 4
  %41 = alloca i32, align 4
  %42 = alloca %struct.TYPE_8__, align 4
  %43 = alloca %struct.TYPE_8__, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 64257, i32* %11, align 4
  store i32 5140, i32* %12, align 4
  store i32 507, i32* %13, align 4
  %44 = bitcast %struct.TYPE_8__* %15 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %44, i8 0, i64 4, i1 false)
  %45 = load i32, i32* %11, align 4
  %46 = call i64 @__msa_fill_h(i32 %45)
  store i64 %46, i64* %37, align 8
  %47 = load i32, i32* %12, align 4
  %48 = call i64 @__msa_fill_h(i32 %47)
  store i64 %48, i64* %38, align 8
  %49 = load i32, i32* %13, align 4
  %50 = call i64 @__msa_fill_h(i32 %49)
  store i64 %50, i64* %39, align 8
  %51 = load i32, i32* %6, align 4
  %52 = mul nsw i32 %51, 2
  %53 = load i32*, i32** %5, align 8
  %54 = sext i32 %52 to i64
  %55 = sub i64 0, %54
  %56 = getelementptr inbounds i32, i32* %53, i64 %55
  store i32* %56, i32** %5, align 8
  %57 = load i32*, i32** %5, align 8
  %58 = load i32, i32* %6, align 4
  %59 = load i64, i64* %16, align 8
  %60 = load i64, i64* %17, align 8
  %61 = load i64, i64* %18, align 8
  %62 = load i64, i64* %19, align 8
  %63 = load i64, i64* %20, align 8
  %64 = call i32 @LD_SB5(i32* %57, i32 %58, i64 %59, i64 %60, i64 %61, i64 %62, i64 %63)
  %65 = load i32, i32* %6, align 4
  %66 = mul nsw i32 5, %65
  %67 = load i32*, i32** %5, align 8
  %68 = sext i32 %66 to i64
  %69 = getelementptr inbounds i32, i32* %67, i64 %68
  store i32* %69, i32** %5, align 8
  %70 = load i64, i64* %17, align 8
  %71 = load i64, i64* %16, align 8
  %72 = load i64, i64* %18, align 8
  %73 = load i64, i64* %17, align 8
  %74 = load i64, i64* %19, align 8
  %75 = load i64, i64* %18, align 8
  %76 = load i64, i64* %20, align 8
  %77 = load i64, i64* %19, align 8
  %78 = load i64, i64* %25, align 8
  %79 = load i64, i64* %29, align 8
  %80 = load i64, i64* %26, align 8
  %81 = load i64, i64* %30, align 8
  %82 = call i32 @ILVR_B4_SB(i64 %70, i64 %71, i64 %72, i64 %73, i64 %74, i64 %75, i64 %76, i64 %77, i64 %78, i64 %79, i64 %80, i64 %81)
  %83 = load i64, i64* %29, align 8
  %84 = load i64, i64* %25, align 8
  %85 = load i64, i64* %30, align 8
  %86 = load i64, i64* %26, align 8
  %87 = load i64, i64* %33, align 8
  %88 = load i64, i64* %34, align 8
  %89 = call i32 @ILVR_D2_SB(i64 %83, i64 %84, i64 %85, i64 %86, i64 %87, i64 %88)
  %90 = load i64, i64* %33, align 8
  %91 = load i64, i64* %34, align 8
  %92 = call i32 @XORI_B2_128_SB(i64 %90, i64 %91)
  %93 = load i32*, i32** %5, align 8
  %94 = load i32, i32* %6, align 4
  %95 = load i64, i64* %21, align 8
  %96 = load i64, i64* %22, align 8
  %97 = load i64, i64* %23, align 8
  %98 = load i64, i64* %24, align 8
  %99 = call i32 @LD_SB4(i32* %93, i32 %94, i64 %95, i64 %96, i64 %97, i64 %98)
  %100 = load i64, i64* %21, align 8
  %101 = load i64, i64* %20, align 8
  %102 = load i64, i64* %22, align 8
  %103 = load i64, i64* %21, align 8
  %104 = load i64, i64* %23, align 8
  %105 = load i64, i64* %22, align 8
  %106 = load i64, i64* %24, align 8
  %107 = load i64, i64* %23, align 8
  %108 = load i64, i64* %27, align 8
  %109 = load i64, i64* %31, align 8
  %110 = load i64, i64* %28, align 8
  %111 = load i64, i64* %32, align 8
  %112 = call i32 @ILVR_B4_SB(i64 %100, i64 %101, i64 %102, i64 %103, i64 %104, i64 %105, i64 %106, i64 %107, i64 %108, i64 %109, i64 %110, i64 %111)
  %113 = load i64, i64* %31, align 8
  %114 = load i64, i64* %27, align 8
  %115 = load i64, i64* %32, align 8
  %116 = load i64, i64* %28, align 8
  %117 = load i64, i64* %35, align 8
  %118 = load i64, i64* %36, align 8
  %119 = call i32 @ILVR_D2_SB(i64 %113, i64 %114, i64 %115, i64 %116, i64 %117, i64 %118)
  %120 = load i64, i64* %35, align 8
  %121 = load i64, i64* %36, align 8
  %122 = call i32 @XORI_B2_128_SB(i64 %120, i64 %121)
  %123 = load i64, i64* %33, align 8
  %124 = load i64, i64* %34, align 8
  %125 = load i64, i64* %35, align 8
  %126 = load i64, i64* %37, align 8
  %127 = load i64, i64* %38, align 8
  %128 = load i64, i64* %39, align 8
  %129 = call i32 @AVC_DOT_SH3_SH(i64 %123, i64 %124, i64 %125, i64 %126, i64 %127, i64 %128)
  store i32 %129, i32* %40, align 4
  %130 = load i64, i64* %34, align 8
  %131 = load i64, i64* %35, align 8
  %132 = load i64, i64* %36, align 8
  %133 = load i64, i64* %37, align 8
  %134 = load i64, i64* %38, align 8
  %135 = load i64, i64* %39, align 8
  %136 = call i32 @AVC_DOT_SH3_SH(i64 %130, i64 %131, i64 %132, i64 %133, i64 %134, i64 %135)
  store i32 %136, i32* %41, align 4
  %137 = load i32, i32* %40, align 4
  %138 = load i32, i32* %41, align 4
  %139 = call i32 @SRARI_H2_SH(i32 %137, i32 %138, i32 5)
  %140 = load i32, i32* %40, align 4
  %141 = load i32, i32* %41, align 4
  %142 = call i32 @SAT_SH2_SH(i32 %140, i32 %141, i32 7)
  %143 = load i32*, i32** %4, align 8
  %144 = load i32, i32* %6, align 4
  %145 = load i32, i32* %7, align 4
  %146 = load i32, i32* %8, align 4
  %147 = load i32, i32* %9, align 4
  %148 = load i32, i32* %10, align 4
  %149 = call i32 @LW4(i32* %143, i32 %144, i32 %145, i32 %146, i32 %147, i32 %148)
  %150 = load i32, i32* %7, align 4
  %151 = load i32, i32* %8, align 4
  %152 = load i32, i32* %9, align 4
  %153 = load i32, i32* %10, align 4
  %154 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %15, i32 0, i32 0
  %155 = load i32, i32* %154, align 4
  %156 = call i32 @INSERT_W4_UB(i32 %150, i32 %151, i32 %152, i32 %153, i32 %155)
  %157 = load i32, i32* %40, align 4
  %158 = load i32, i32* %41, align 4
  %159 = call i32 @PCKEV_XORI128_UB(i32 %157, i32 %158)
  %160 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %42, i32 0, i32 0
  store i32 %159, i32* %160, align 4
  %161 = bitcast %struct.TYPE_8__* %14 to i8*
  %162 = bitcast %struct.TYPE_8__* %42 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %161, i8* align 4 %162, i64 4, i1 false)
  %163 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %14, i32 0, i32 0
  %164 = load i32, i32* %163, align 4
  %165 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %15, i32 0, i32 0
  %166 = load i32, i32* %165, align 4
  %167 = call i32 @__msa_aver_u_b(i32 %164, i32 %166)
  %168 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %43, i32 0, i32 0
  store i32 %167, i32* %168, align 4
  %169 = bitcast %struct.TYPE_8__* %15 to i8*
  %170 = bitcast %struct.TYPE_8__* %43 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %169, i8* align 4 %170, i64 4, i1 false)
  %171 = load i32*, i32** %4, align 8
  %172 = load i32, i32* %6, align 4
  %173 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %15, i32 0, i32 0
  %174 = load i32, i32* %173, align 4
  %175 = call i32 @ST_W4(i32 %174, i32 0, i32 1, i32 2, i32 3, i32* %171, i32 %172)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i64 @__msa_fill_h(i32) #2

declare dso_local i32 @LD_SB5(i32*, i32, i64, i64, i64, i64, i64) #2

declare dso_local i32 @ILVR_B4_SB(i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64) #2

declare dso_local i32 @ILVR_D2_SB(i64, i64, i64, i64, i64, i64) #2

declare dso_local i32 @XORI_B2_128_SB(i64, i64) #2

declare dso_local i32 @LD_SB4(i32*, i32, i64, i64, i64, i64) #2

declare dso_local i32 @AVC_DOT_SH3_SH(i64, i64, i64, i64, i64, i64) #2

declare dso_local i32 @SRARI_H2_SH(i32, i32, i32) #2

declare dso_local i32 @SAT_SH2_SH(i32, i32, i32) #2

declare dso_local i32 @LW4(i32*, i32, i32, i32, i32, i32) #2

declare dso_local i32 @INSERT_W4_UB(i32, i32, i32, i32, i32) #2

declare dso_local i32 @PCKEV_XORI128_UB(i32, i32) #2

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @__msa_aver_u_b(i32, i32) #2

declare dso_local i32 @ST_W4(i32, i32, i32, i32, i32, i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
